--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
   <title>Мини-приложение</title>
   <style>
     body {
-      background-color: #0d0d0d;
+      background: linear-gradient(to top left, #0f0f0f 90%, #00c8ff14);
       color: white;
       font-family: sans-serif;
       margin: 0;
       padding: 0;
     }
     .container {
-      padding: 16px;
+      padding: 20px;
     }
     .avatar {
-      width: 50px;
-      height: 50px;
-      background: linear-gradient(to right, #6a11cb, #2575fc);
+      width: 59px;
+      height: 59px;
+      background: #0f0f0f;
+      opacity: 0.7;
       border-radius: 50%;
       display: flex;
       justify-content: center;
@@ -27,31 +28,33 @@
       font-size: 16px;
     }
     .balance-box {
-      background-color: #1a1a1a;
+      background-color: #0f0f0f;
+      opacity: 0.7;
       border-radius: 20px;
       padding: 16px;
-      margin-top: 16px;
+      margin-top: 24px;
     }
     .invest-button {
-      background-color: lime;
+      background-color: #00ff00;
       color: black;
       font-weight: bold;
-      padding: 12px;
+      padding: 14px;
       border: none;
       border-radius: 8px;
       cursor: pointer;
       width: 100%;
-      margin-top: 16px;
+      margin-top: 20px;
     }
     .nav {
       position: fixed;
       bottom: 0;
       left: 0;
       width: 100%;
-      background-color: #111;
+      background-color: #0f0f0f;
+      opacity: 0.7;
       display: flex;
       justify-content: space-around;
-      padding: 10px 0;
+      padding: 14px 0;
     }
     .nav button {
       background: none;
@@ -64,7 +67,7 @@
 </head>
 <body>
   <div class="container">
-    <div style="display: flex; align-items: center; gap: 10px;">
+    <div style="display: flex; align-items: center; gap: 12px;">
       <div class="avatar">EE</div>
       <div style="font-size: 16px;">Emir Emirsinov</div>
     </div>
