--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Интерфейс</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Крипто Кошелёк</title>
   <style>
     * {
       box-sizing: border-box;
@@ -11,13 +11,13 @@
 
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to top left, #0F0F0F 95%, #00C8FF14);
+      padding: 0;
+      font-family: 'Arial', sans-serif;
+      background: radial-gradient(circle at top left, #0a0f1c, #000000);
       color: white;
       height: 100vh;
       display: flex;
       flex-direction: column;
-      overflow: hidden;
     }
 
     .container {
@@ -25,32 +25,31 @@
       padding: 16px;
       display: flex;
       flex-direction: column;
-      max-width: 100%;
     }
 
     .user-info {
       display: flex;
       align-items: center;
+      gap: 12px;
       margin-bottom: 16px;
     }
 
     .avatar {
       width: 42px;
       height: 42px;
-      background-color: rgba(15, 15, 15, 0.7);
+      background: linear-gradient(to right, #6a11cb, #2575fc);
       border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
       font-weight: bold;
-      margin-right: 10px;
     }
 
     .balance-box {
-      background-color: rgba(15, 15, 15, 0.7);
+      background-color: rgba(15, 15, 15, 0.8);
       border-radius: 16px;
       padding: 16px;
-      margin-bottom: 16px;
+      margin-bottom: 20px;
     }
 
     .trx {
@@ -65,7 +64,7 @@
       font-size: 16px;
       padding: 14px;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
       width: 100%;
       margin-bottom: 20px;
@@ -74,8 +73,8 @@
     .nav {
       display: flex;
       justify-content: space-around;
-      background-color: rgba(15, 15, 15, 0.9);
-      padding: 12px 0;
+      background-color: rgba(0, 0, 0, 0.9);
+      padding: 12px 10px;
       border-top: 1px solid #222;
     }
 
@@ -84,16 +83,17 @@
       margin: 0 6px;
       font-size: 15px;
       padding: 12px 0;
-      background-color: #0F0F0F;
+      background-color: #111;
       color: white;
       border: none;
-      border-radius: 10px;
+      border-radius: 50px;
       font-weight: bold;
       cursor: pointer;
+      transition: background 0.3s;
     }
 
     .nav button:hover {
-      background-color: #1a1a1a;
+      background-color: #1f1f1f;
     }
 
     .hidden {
@@ -119,11 +119,11 @@
     </div>
 
     <div id="walletPage" class="hidden">
-      <div class="balance-box">Здесь будет кошелек</div>
+      <div class="balance-box">Кошелек будет здесь</div>
     </div>
 
     <div id="historyPage" class="hidden">
-      <div class="balance-box">История инвестиций</div>
+      <div class="balance-box">История инвестиций будет здесь</div>
     </div>
   </div>
 
@@ -145,10 +145,10 @@
     document.getElementById('userInitials').textContent = initials || "--";
 
     function showPage(pageId) {
-      document.getElementById('mainPage').classList.add('hidden');
-      document.getElementById('walletPage').classList.add('hidden');
-      document.getElementById('historyPage').classList.add('hidden');
-      document.getElementById(pageId).classList.remove('hidden');
+      document.getElementById("mainPage").classList.add("hidden");
+      document.getElementById("walletPage").classList.add("hidden");
+      document.getElementById("historyPage").classList.add("hidden");
+      document.getElementById(pageId).classList.remove("hidden");
     }
   </script>
 </body>
