--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       font-weight: bold;
     }
 
-    .invest-button {
+    .invest-button, .action-button {
       background-color: #00FF00;
       color: black;
       font-weight: bold;
@@ -105,10 +105,27 @@
     .hidden {
       display: none;
     }
+
+    .copyable {
+      word-break: break-all;
+      color: #00ff00;
+      cursor: pointer;
+      font-size: 14px;
+      user-select: all;
+    }
+
+    .instruction {
+      font-size: 13px;
+      background-color: #111;
+      padding: 12px;
+      border-radius: 10px;
+      margin-top: 16px;
+    }
   </style>
 </head>
 <body>
   <div class="container">
+    <!-- Главная -->
     <div id="mainPage">
       <div class="user-info">
         <div class="avatar" id="avatarWrapper">
@@ -126,15 +143,40 @@
       <button class="invest-button">Инвестировать</button>
     </div>
 
+    <!-- Кошелек -->
     <div id="walletPage" class="hidden">
-      <div class="balance-box">Кошелек будет здесь</div>
+      <button class="action-button" onclick="generateWallet()">Создать кошелек</button>
+      <div id="walletInfo" class="hidden">
+        <div class="balance-box">
+          <div style="font-weight:bold">Баланс TRX</div>
+          <div style="margin-top: 6px;">0.00 TRX</div>
+        </div>
+        <div class="balance-box">
+          <div style="font-weight:bold">Приватный ключ:</div>
+          <div id="privateKey" class="copyable">(появится здесь)</div>
+        </div>
+        <div class="balance-box">
+          <div style="font-weight:bold">TRX адрес:</div>
+          <div id="walletAddress" class="copyable">(появится здесь)</div>
+        </div>
+
+        <div class="instruction">
+          <strong>Инструкция:</strong><br />
+          1️⃣ Скачайте <b>TrustWallet</b> в App Store / Google Play.<br />
+          2️⃣ Импортируйте с помощью приватного ключа.<br />
+          3️⃣ Установите пароль и никому не передавайте ключ.<br />
+          ✅ Готово!
+        </div>
+      </div>
     </div>
 
+    <!-- История -->
     <div id="historyPage" class="hidden">
       <div class="balance-box">История инвестиций будет здесь</div>
     </div>
   </div>
 
+  <!-- Навигация -->
   <div class="nav">
     <button onclick="showPage('mainPage')">Главная</button>
     <button onclick="showPage('walletPage')">Кошелек</button>
@@ -149,7 +191,7 @@
       document.getElementById(pageId).classList.remove("hidden");
     }
 
-    // Telegram WebApp integration
+    // Telegram WebApp API
     const tg = window.Telegram.WebApp;
     tg.ready();
 
@@ -171,6 +213,26 @@
       const initials = `${firstName.charAt(0)}${lastName.charAt(0)}`.toUpperCase();
       document.getElementById("userInitials").textContent = initials || "--";
     }
+
+    // Простейшая генерация TRX адреса и приватного ключа (для демо)
+    function generateWallet() {
+      const address = "T" + Math.random().toString(36).substring(2, 34);
+      const privateKey = Math.random().toString(36).substring(2) + Math.random().toString(36).substring(2);
+
+      document.getElementById("walletInfo").classList.remove("hidden");
+      document.getElementById("walletAddress").textContent = address;
+      document.getElementById("privateKey").textContent = privateKey;
+    }
+
+    // Копирование по клику
+    document.addEventListener("click", function (e) {
+      if (e.target.classList.contains("copyable")) {
+        const text = e.target.textContent;
+        navigator.clipboard.writeText(text).then(() => {
+          alert("Скопировано!");
+        });
+      }
+    });
   </script>
 </body>
 </html>
