--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Крипто Кошелёк</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
     * {
       box-sizing: border-box;
@@ -122,6 +121,23 @@
       border-radius: 10px;
       margin-top: 16px;
     }
+
+    .history-item {
+      background-color: rgba(255, 255, 255, 0.05);
+      padding: 12px;
+      border-radius: 12px;
+      margin-bottom: 12px;
+      display: flex;
+      flex-direction: column;
+    }
+    .history-item .amount {
+      font-weight: bold;
+      color: #00ff00;
+    }
+    .history-item .date {
+      font-size: 12px;
+      color: #888;
+    }
   </style>
 </head>
 <body>
@@ -173,7 +189,23 @@
 
     <!-- История -->
     <div id="historyPage" class="hidden">
-      <div class="balance-box">История инвестиций будет здесь</div>
+      <div class="balance-box">
+        <div class="history-item">
+          <div>Инвестиция</div>
+          <div class="amount">+100.00 TRX</div>
+          <div class="date">14.05.2025, 18:20</div>
+        </div>
+        <div class="history-item">
+          <div>Вывод</div>
+          <div class="amount">-50.00 TRX</div>
+          <div class="date">13.05.2025, 10:12</div>
+        </div>
+        <div class="history-item">
+          <div>Инвестиция</div>
+          <div class="amount">+70.00 TRX</div>
+          <div class="date">12.05.2025, 16:45</div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -192,7 +224,6 @@
       document.getElementById(pageId).classList.remove("hidden");
     }
 
-    // Telegram WebApp API
     const tg = window.Telegram.WebApp;
     tg.ready();
 
@@ -215,7 +246,6 @@
       document.getElementById("userInitials").textContent = initials || "--";
     }
 
-    // Простейшая генерация TRX адреса и приватного ключа (для демо)
     function generateWallet() {
       const address = "T" + Math.random().toString(36).substring(2, 34);
       const privateKey = Math.random().toString(36).substring(2) + Math.random().toString(36).substring(2);
@@ -225,7 +255,6 @@
       document.getElementById("privateKey").textContent = privateKey;
     }
 
-    // Копирование по клику
     document.addEventListener("click", function (e) {
       if (e.target.classList.contains("copyable")) {
         const text = e.target.textContent;
